# async-rpc-fbthrift

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  ExampleHandler.h  Makefile  README.md  client.cpp  compile_commands.json  docker-compose.yml  main.cc  server.cpp
client/: EchoClient.cpp
container_files/: client_stats.csv  message_service_stats.csv  mock_database_stats.csv  sanitization_service_stats.csv
data_analysis/: plot_utils.py
dep/if/: example.thrift
dep/if/gen-cpp2/: ChatRoomService.cpp  ChatRoomService.h  ChatRoomService.tcc  ChatRoomServiceAsyncClient.cpp  ChatRoomServiceAsyncClient.h  ChatRoomService_custom_protocol.h  ChatRoomService_processmap_compact.cpp  Echo.cpp  Echo.h  Echo.tcc  EchoAsyncClient.cpp  EchoAsyncClient.h  Echo_custom_protocol.h  Echo_processmap_compact.cpp  chatroom_constants.cpp  chatroom_constants.h  chatroom_data.cpp  chatroom_data.h  chatroom_for_each_field.h  chatroom_metadata.cpp  chatroom_metadata.h  chatroom_types.cpp  chatroom_types.h  chatroom_types.tcc  chatroom_types_custom_protocol.h  chatroom_visit_by_thrift_field_metadata.h  chatroom_visit_union.h  chatroom_visitation.h
dep/perf/cpp2/util/: Util.cpp
frontend-server/: Dockerfile  server.py
server/: ChatRoomService.cpp  EchoService.h  ExampleServer.cpp
src/: CMakeLists.txt  client.cpp  server.cpp  shared.h
src/Client/: CMakeLists.txt  Client.cpp  client.cpp
src/MessageService/: CMakeLists.txt  MessageService.cpp  MessageService.h  MessageServiceServer.cpp  externalCo.cpp  externalCo.h
src/MockDatabase/: CMakeLists.txt  MockDatabase.cpp  MockDatabase.h  MockDatabaseClient.cpp  MockDatabaseHandler.h  MockDatabaseMiddle.cpp  MockDatabaseMiddleHandler.h  MockDatabaseServer.cpp
src/MockDatabase/old/: MockDatabaseClient.cpp  MockDatabaseMiddleHandler.h
src/SanitizationService/: CMakeLists.txt  SanitizationHandler.h  SanitizationService.cpp  SanitizationService.h  SanitizationServiceClient.cpp  SanitizationServiceServer.cpp
src/SanitizationService/old/: SanitizationServiceClient.cpp
src/cmake_module/: FBCMakeParseArgs.cmake  FBThriftCppLibrary.cmake
src/common/fb303/cpp/: FacebookBase2.h
src/common/fb303/if/: fb303.thrift
src/dep/if/: CMakeLists.txt  mock_message_board.thrift
src/dep/perf/cpp2/util/: Util.h
src/example/: .gitignore  CMakeLists.txt
src/example/client/: ChatRoomClient.cpp
src/example/server/: ChatRoomService.cpp  EchoService.cpp
src/old/example/client/: EchoClient.cpp
src/old/example/dep/if/: CMakeLists.txt
src/old/example/dep/perf/cpp2/util/: Util.h
src/old/example/metadata/: MetadataExample.cpp
src/old/example/server/: ChatRoomService.h
src/old/working_example/: CMakeLists.txt  client.cpp  server.cpp
src/shared/: CMakeLists.txt  HashNode.h  ServerStats.cpp  ServerStats.h  ServerStatsEncoder.cpp  Utils.cpp  Utils.h
